Bug 1133741 - Add camera focus hardware button. r=masayuki